--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,6 +43,4 @@ workflows:
   my_workflow:
       jobs:
         - create_infrastructure
-        - configure_infrastructure:
-            requires:
-              - create_infrastructure
+        # - configure_infrastructure
