Uncommented configure_infrastructure in workflows and updated inventory

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,5 +42,5 @@ jobs:
 workflows:
   my_workflow:
       jobs:
-        - create_infrastructure
-        # - configure_infrastructure
+        # - create_infrastructure
+        - configure_infrastructure
