--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,23 @@ orbs:
   # Declare a dependency on the welcome-orb
   # welcome: circleci/welcome-orb@0.4.1
   aws-cli: circleci/aws-cli@2.0.3
+
+
 # Orchestrate or schedule a set of jobs
+
+commands:
+  # Exercise - Rollback
+  destroy_environment:
+    steps:
+      - run:
+          name: Destroy environment
+          # ${CIRCLE_WORKFLOW_ID} is a Built-in environment variable 
+          # ${CIRCLE_WORKFLOW_ID:0:5} takes the first 5 chars of the variable CIRCLE_CI_WORKFLOW_ID 
+          when: on_fail
+          command: |
+            aws cloudformation delete-stack --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:5}
+ 
+
 jobs:
   create_infrastructure: 
       docker:
@@ -20,6 +36,7 @@ jobs:
                 --template-file template.yml \
                 --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:5} \
                 --region us-east-1
+        - destroy_environment
   # Exercise: Config and Deployment
   configure_infrastructure: 
     docker:
@@ -37,7 +54,6 @@ jobs:
       - run:
           name: Run Playbook and Configure server
           command: |
-            # Your command
             ansible-playbook -i inventory main.yml
 workflows:
   my_workflow:
