--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -58,6 +58,6 @@ workflows:
   my_workflow:
       jobs:
         - create_infrastructure
-        - configure_infrastructure:
-            requires:
-              - create_infrastructure
+        # - configure_infrastructure:
+        #     requires:
+        #       - create_infrastructure
