--- a/main.yml
+++ b/main.yml
@@ -3,7 +3,7 @@
 - name: Exercise for setting up a web server in an EC 
   # hosts: ubuntu
   # Use the public IP if the VM is already created
-  hosts: all
+  hosts: 3.87.223.31
   user: ubuntu
   become: true
   become_method: sudo
