--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -59,5 +59,5 @@ workflows:
       jobs:
         # - create_infrastructure
         - configure_infrastructure:
-            requires:
-              - create_infrastructure
+            # requires:
+            #   - create_infrastructure
