--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,15 +12,15 @@ orbs:
 
 commands:
   # Exercise - Rollback
-  destroy_environment:
-    steps:
-      - run:
-        name: Destroy environment
-        # ${CIRCLE_WORKFLOW_ID} is a Built-in environment variable 
-        # ${CIRCLE_WORKFLOW_ID:0:5} takes the first 5 chars of the variable CIRCLE_CI_WORKFLOW_ID 
-        when: on_fail
-        command: |
-          aws cloudformation delete-stack --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:5}
+  # destroy_environment:
+  #   steps:
+  #     - run:
+  #       name: Destroy environment
+  #       # ${CIRCLE_WORKFLOW_ID} is a Built-in environment variable 
+  #       # ${CIRCLE_WORKFLOW_ID:0:5} takes the first 5 chars of the variable CIRCLE_CI_WORKFLOW_ID 
+  #       when: on_fail
+  #       command: |
+  #         aws cloudformation delete-stack --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:5}
  
 jobs:
   create_infrastructure: 
@@ -35,7 +35,7 @@ jobs:
               --template-file template.yml \
               --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:5} \
               --region us-east-1
-      - destroy_environment
+      # - destroy_environment
   # Exercise: Config and Deployment
   configure_infrastructure: 
     docker:
