--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,28 +1,30 @@
+# Use the latest 2.1 version of CircleCI pipeline process engine. See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
-
 # Use a package of configuration called an orb.
 orbs:
   # Choose either one of the orbs below
   # Declare a dependency on the welcome-orb
   # welcome: circleci/welcome-orb@0.4.1
   aws-cli: circleci/aws-cli@2.0.3
-
-
 # Orchestrate or schedule a set of jobs
 
 commands:
+
   # Exercise - Rollback
-  # destroy_environment:
-  #   steps:
-  #     - run:
-  #       name: Destroy environment
-  #       # ${CIRCLE_WORKFLOW_ID} is a Built-in environment variable 
-  #       # ${CIRCLE_WORKFLOW_ID:0:5} takes the first 5 chars of the variable CIRCLE_CI_WORKFLOW_ID 
-  #       when: on_fail
-  #       command: |
-  #         aws cloudformation delete-stack --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:5}
- 
+  destroy_environment:
+    steps:
+      - run:
+          name: Destroy environment
+          # ${CIRCLE_WORKFLOW_ID} is a Built-in environment variable 
+          # ${CIRCLE_WORKFLOW_ID:0:5} takes the first 5 chars of the variable CIRCLE_CI_WORKFLOW_ID 
+          when: on_fail
+          command: |
+            aws cloudformation delete-stack --stack-name udacity-ansible-${CIRCLE_WORKFLOW_ID:0:5}
+          
 jobs:
+ 
+  # Exercise: Infrastructure Creation
+  # Exercise - Rollback
   create_infrastructure: 
     docker:
       - image: amazon/aws-cli
@@ -33,9 +35,11 @@ jobs:
           command: |
             aws cloudformation deploy \
               --template-file template.yml \
-              --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:5} \
+              --stack-name udacity-ansible-${CIRCLE_WORKFLOW_ID:0:5} \
               --region us-east-1
-      # - destroy_environment
+      - destroy_environment
+
+
   # Exercise: Config and Deployment
   configure_infrastructure: 
     docker:
@@ -43,21 +47,22 @@ jobs:
     steps:
       - checkout
       - add_ssh_keys:
-          # You can get this ID in the section where you registered the SSH Key
-          fingerprints: ["df:83:e0:c2:78:ee:41:25:a7:e9:c2:5c:d8:86:0a:04"] 
+          fingerprints: ["df:83:e0:c2:78:ee:41:25:a7:e9:c2:5c:d8:86:0a:04"] # You can get this ID in the section where you registered the SSH Key
       - run:
-          name: Install Ansible
+          name: Install dependencies
           command: |
-            # Install Ansible
-            apk add --update ansible
+            # install the dependencies needed for your playbook
+            apk add --update ansible 
       - run:
-          name: Run Playbook and Configure server
+          name: Configure server
           command: |
-            ansible-playbook -i inventory main.yml
+            ansible-playbook -i inventory main.yml  
+    
 workflows:
+  # Name the workflow "welcome"
   my_workflow:
+    # Run the welcome/run job in its own container
     jobs:
-      # - create_infrastructure
-      - configure_infrastructure:
-          # requires:
-          #   - create_infrastructure
+      # - welcome/run
+      - create_infrastructure
+      - configure_infrastructure
