--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -64,5 +64,5 @@ workflows:
     # Run the welcome/run job in its own container
     jobs:
       # - welcome/run
-      - create_infrastructure
-      # - configure_infrastructure
+      # - create_infrastructure
+      - configure_infrastructure
