Add smoke_test job

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,7 +57,25 @@ jobs:
           name: Configure server
           command: |
             ansible-playbook -i inventory main.yml  
-    
+
+  # Exercise: Smoke Testing
+  smoke_test:
+    docker:
+      - image: alpine:latest
+    steps:
+      - run: apk add --update curl
+      - run:
+          name: smoke test
+          command: |
+            URL="https://blog.udacity.com/"
+            # Test if website exists
+            if curl -s --head ${URL} 
+            then
+              return 0
+            else
+              return 1
+            fi
+
 workflows:
   # Name the workflow "welcome"
   my_workflow:
@@ -65,4 +83,5 @@ workflows:
     jobs:
       # - welcome/run
       # - create_infrastructure
-      - configure_infrastructure
+      # - configure_infrastructure
+      - smoke_test
