--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -64,17 +64,21 @@ jobs:
       - image: alpine:latest
     steps:
       - run: apk add --update curl
+      # - run:
+      #     name: smoke test
+      #     command: |
+      #       URL="https://blog.udacity.com/"
+      #       # Test if website exists
+      #       if curl -s --head ${URL} 
+      #       then
+      #         return 0
+      #       else
+      #         return 1
+      #       fi
       - run:
-          name: smoke test
-          command: |
-            URL="https://blog.udacity.com/"
-            # Test if website exists
-            if curl -s --head ${URL} 
-            then
-              return 0
-            else
-              return 1
-            fi
+          name: Test job
+          command: return 1
+      - destroy_environment
 
 workflows:
   # Name the workflow "welcome"
