--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -88,4 +88,6 @@ workflows:
       # - welcome/run
       - create_infrastructure
       # - configure_infrastructure
-      - smoke_test
+      - smoke_test:
+          requires:
+            - create_infrastructure
