--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -86,7 +86,9 @@ workflows:
     # Run the welcome/run job in its own container
     jobs:
       # - welcome/run
-      # - create_infrastructure
+      - create_infrastructure
       # - configure_infrastructure
       - smoke_test:
+          requires:
+            - create_infrastructure
 
