--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,7 @@ commands:
           # ${CIRCLE_WORKFLOW_ID:0:5} takes the first 5 chars of the variable CIRCLE_CI_WORKFLOW_ID 
           when: on_fail
           command: |
-            aws cloudformation delete-stack --stack-name udacity-ansible-${CIRCLE_WORKFLOW_ID:0:5}
+            aws cloudformation delete-stack --stack-name udacity-ansible-${CIRCLE_WORKFLOW_ID:0:7}
           
 jobs:
  
@@ -35,7 +35,7 @@ jobs:
           command: |
             aws cloudformation deploy \
               --template-file template.yml \
-              --stack-name udacity-ansible-${CIRCLE_WORKFLOW_ID:0:5} \
+              --stack-name udacity-ansible-${CIRCLE_WORKFLOW_ID:0:7} \
               --region us-east-1
       - destroy_environment
 
@@ -63,7 +63,7 @@ jobs:
     docker:
       - image: alpine:latest
     steps:
-      - run: apk add --update curl
+      # - run: apk add --update curl
       # - run:
       #     name: smoke test
       #     command: |
@@ -86,7 +86,7 @@ workflows:
     # Run the welcome/run job in its own container
     jobs:
       # - welcome/run
-      # - create_infrastructure
+      - create_infrastructure
       # - configure_infrastructure
       - smoke_test
 
