--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,8 +18,10 @@ commands:
           # ${CIRCLE_WORKFLOW_ID} is a Built-in environment variable 
           # ${CIRCLE_WORKFLOW_ID:0:5} takes the first 5 chars of the variable CIRCLE_CI_WORKFLOW_ID 
           when: on_fail
+          # command: |
+          #   aws cloudformation delete-stack --stack-name udacity-ansible-${CIRCLE_WORKFLOW_ID:0:7}
           command: |
-            aws cloudformation delete-stack --stack-name udacity-ansible-${CIRCLE_WORKFLOW_ID:0:7}
+            aws cloudformation delete-stack --stack-name udacity-ansible
           
 jobs:
  
@@ -35,7 +37,7 @@ jobs:
           command: |
             aws cloudformation deploy \
               --template-file template.yml \
-              --stack-name udacity-ansible-${CIRCLE_WORKFLOW_ID:0:7} \
+              --stack-name udacity-ansible \
               --region us-east-1
       - destroy_environment
 
@@ -89,4 +91,6 @@ workflows:
       - create_infrastructure
       # - configure_infrastructure
       - smoke_test
+          requires:
+            -create_infrastructure
 
