Add create_and_deploy_front_end job

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -65,22 +65,39 @@ jobs:
       - image: amazon/aws-cli
       # - image: alpine:latest
     steps:
-      # - run: apk add --update curl
-      # - run:
-      #     name: smoke test
-      #     command: |
-      #       URL="https://blog.udacity.com/"
-      #       # Test if website exists
-      #       if curl -s --head ${URL} 
-      #       then
-      #         return 0
-      #       else
-      #         return 1
-      #       fi
+      - run: apk add --update curl
       - run:
-          name: Test job
-          command: return 1
+          name: smoke test
+          command: |
+            URL="https://blog.udacity.com/"
+            # Test if website exists
+            if curl -s --head ${URL} 
+            then
+              return 0
+            else
+              return 1
+            fi
+      # - run:
+      #     name: Test job
+      #     command: return 1
       - destroy_environment
+
+  # Executes the bucket.yml - Deploy an S3 bucket, and interface with that bucket to synchronize the files between local and the bucket.
+  # Note that the `--parameter-overrides` let you specify a value that override parameter value in the bucket.yml template file.
+  create_and_deploy_front_end:
+  docker:
+  - image: amazon/aws-cli
+  steps:
+  - checkout
+  - run:
+      name: Execute bucket.yml - Create Cloudformation Stack
+      command: |
+        aws cloudformation deploy \
+        --template-file bucket.yml \
+        --stack-name stack-create-bucket-${CIRCLE_WORKFLOW_ID:0:7} \
+        --parameter-overrides MyBucketName="mybucket-${CIRCLE_WORKFLOW_ID:0:7}"
+  # Uncomment the step below if yoou wish to upload all contents of the current directory to the S3 bucket
+    - run: aws s3 sync . s3://mybucket-${CIRCLE_WORKFLOW_ID:0:7} --delete
 
 workflows:
   # Name the workflow "welcome"
@@ -89,8 +106,9 @@ workflows:
     jobs:
       # - welcome/run
       - create_infrastructure
-      # - configure_infrastructure
+      - configure_infrastructure
       - smoke_test:
           requires:
             - create_infrastructure
+      - create_and_deploy_front_end
 
