--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,6 +38,15 @@ jobs:
               --template-file template.yml \
               --stack-name udacity-ansible-${CIRCLE_WORKFLOW_ID:0:7} \
               --region us-east-1
+      - run:
+          name: Run Playbook and Configure server
+          command: |
+            cd ansibles
+            aws ec2 describe-instances --query 'Reservations[*].Instances[*].PublicIpAddress' --output text >> inventory
+      - persist_to_workspace:
+          root: ./
+          paths:
+            - inventory
       - destroy_environment
 
 
@@ -46,6 +55,8 @@ jobs:
     docker:
       - image: python:3.11-rc-alpine
     steps:
+      - attach_workspace:
+        at: ./
       - checkout
       - add_ssh_keys:
           fingerprints: ["1d:a3:cf:a7:e1:b0:33:cd:c9:7b:96:a0:55:70:43:10"] # You can get this ID in the section where you registered the SSH Key
